# haiku-buildtools-jarek

./: CMakeLists.txt  README.md
binutils-2.29/: configure
binutils-2.29/bfd/: config.bfd
binutils-2.29/gas/: configure.tgt
binutils-2.29/ld/: Makefile.in  configure.tgt
binutils-2.29/ld/emulparams/: aarch64haiku.sh  armelf_haiku.sh  elf_i386_haiku.sh
binutils/ld/emulparams/: aarch64haiku.sh  armelf_haiku.sh  elf_i386_haiku.sh
cmake/cross-runtime/: CMakeLists.txt  CrossToolchainFile.cmake.in
gcc-7.2.0/gcc/: Makefile.in  config.gcc  config.host  configure  configure.ac
gcc-7.2.0/gcc/config/: haiku.h
gcc-7.2.0/gcc/config/aarch64/: aarch64-haiku.h
gcc-7.2.0/gcc/config/arm/: haiku.h  t-haiku
gcc-7.2.0/gcc/config/i386/: haiku.h  haiku64.h
gcc-7.2.0/libgcc/: config.host
gcc-7.2.0/libstdc++-v3/: configure  configure.host  crossconfig.m4
